# production-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  mlruns.db  pyproject.toml
artifacts/experiments/custom-ragas-prompt-for-factual-correctness/: config.json
artifacts/experiments/enhance-cr-prompt/: config.json  report.json  results.csv
artifacts/experiments/enhance-generation-system-prompt/: config.json  report.json  scores.csv
artifacts/experiments/hybrid-search/: config.json  report.json  results.csv
artifacts/experiments/hybrid-search-with-reranking/: analysis.md  config.json  report.json  results.csv
artifacts/experiments/implement-table-aware-chunking/: analysis.md  report.json
artifacts/experiments/increase-row-overlap-to-4/: config.json  report.json  scores.csv
artifacts/experiments/initial-experiment/: config.json  scores.csv
artifacts/experiments/key-column-metadata-injection/: config.json  report.json  results.csv
artifacts/experiments/markdown-tables-insteadof-html/: config.json  scores.csv
artifacts/experiments/set-top-k-to-10/: config.json  report.json  scores.csv
artifacts/experiments/table-aware-chunking-with-subtables/: analysis.md  config.json
artifacts/ragas/: curated_testset.csv
artifacts/ragas/experiments/initial-experiment/: analysis.md  report.json
artifacts/testsets/: curated_testset.csv  final_ragas_testset.csv
configs/: cloud-ollama.yaml  google-genai.yaml  openai.yaml
mlruns/1/0b13c886a771477e921ec7874dcb3d23/artifacts/: report.json
mlruns/1/47d1c980debd483a9435ff74785d0431/artifacts/: config.json  report.json
mlruns/1/54b2efaa50ce4adc9555eb8bd32e1f62/artifacts/: report.json  results.csv
mlruns/1/7454a16cc295412eb5b35940bd61b8a2/artifacts/: config.json  report.json  results.csv
mlruns/1/c832183e4cca4db7a72179cc342289e1/artifacts/: report.json  scores.csv
mlruns/1/df966e099ea948379667836aacf85685/artifacts/: config.json  report.json  scores.csv
mlruns/1/e41d7e52fc38476ab11eb9d2c8ff8b36/artifacts/: report.json  results.csv
mlruns/1/f2d5c3d1e21344bd9de68f604c537999/artifacts/: config.json  scores.csv
mlruns/1/f3fd52641316416fa398c2a3595333aa/artifacts/: config.json  report.json
scripts/: backfill_mlflow.py  clean_testset.py  ingest.py  plot_experiment_progression.py  write_curated_testset.py
src/: constants.py  database.py  embeddings.py  evaluate.py  generate_ragas_testset.py  ingest.py  parse.py  parse_vectorize.py  retrieve.py
src/production_rag/: __init__.py
src/production_rag/core/: __init__.py  config.py  database.py
src/production_rag/demo/: __init__.py  ask.py
src/production_rag/evals/: __init__.py  cli.py  evaluate.py  generate_ragas_testset.py  metrics.py  mlflow_tracking.py  reporting.py  schemas.py  testset.py
src/production_rag/pipeline/: __init__.py  embeddings.py  parse.py  retrieve.py  utils.py
