[project]
name = "production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "llama-cloud>=1.3.0",
    "loguru>=0.7.3",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "ollama>=0.1.7",
    "langchain>=1.2.10",
    "langchain-text-splitters>=1.1.0",
    "langchain-ollama>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-postgres>=0.0.16",
    "langchain-google-genai>=4.2.0",
    "ragas==0.4.3",
    "pandas>=3.0.0",
    "rapidfuzz>=3.14.3",
    "google-genai>=1.63.0",
    "tenacity>=9.1.4",
    "openai>=2.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
