[project]
name = "production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "llama-cloud>=1.3.0",
    "loguru>=0.7.3",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "ollama>=0.1.7",
    "langchain>=1.2.10",
    "langchain-text-splitters>=1.1.0",
    "langchain-ollama>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-postgres>=0.0.16",
    "langchain-google-genai>=4.2.0",
    "ragas==0.4.3",
    "pandas>=3.0.0",
    "rapidfuzz>=3.14.3",
    "google-genai>=1.63.0",
    "tenacity>=9.1.4",
    "openai>=2.20.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "ruff check src/"
lint-fix = "ruff check --fix src/"
format = "ruff format src/"
format-check = "ruff format --check src/"
typecheck = "mypy src/"
check = "task lint && task typecheck && task format-check"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = [
  "pydantic.mypy",
]

ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
